Feature/claims api (#13)
* added API LED Claims API

* updated docs

* updatd broken link

* updated readme file for performance learning

Co-authored-by: Suresh Dhaka <sureshd@datacom.co.nz>